--- a/.env
+++ b/.env
@@ -16,7 +16,7 @@
 
 ###> symfony/framework-bundle ###
 APP_ENV=dev
-APP_SECRET=ssdsfsd
+APP_SECRET=4438cc06cfccbacc74a54e0c1bf7d1ad
 ###< symfony/framework-bundle ###
 
 ###> doctrine/doctrine-bundle ###
