--- a/composer.json
+++ b/composer.json
@@ -42,6 +42,7 @@
     "symfony/ux-turbo": "^2.23.0",
     "symfony/validator": "7.2.*",
     "symfony/web-link": "7.2.*",
+    "symfony/workflow": "7.2.*",
     "symfony/yaml": "7.2.*",
     "twig/extra-bundle": "^2.12|^3.19",
     "twig/intl-extra": "^3.19",
